# air_quality_monitor

./: .gitignore  CMakeLists.txt  README.md  STM32F439ZITx_FLASH.ld  gcc-options-cxx.txt  st_nucleo_f4.cfg
App/Inc/: config.h  debug.h  hardware_init.h  main.h  stm32f4xx_hal_conf.h
App/Inc/eeprom/: at24c256_eeprom.h
App/Inc/sensors/: bsec_integration.h  co2_sensor.h  env_sensor.h  iaq_sensor.h  iaq_sensor_bsec.h  pm_sensor.h
App/Src/: debug.c  hardware_init.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
App/Src/eeprom/: at24c256_eeprom.c
App/Src/sensors/: bsec_integration.c  co2_sensor.c  env_sensor.c  iaq_sensor.c  iaq_sensor_bsec.c  pm_sensor.c
App/Src/system/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
Drivers/BME280/: README.md  bme280.c  bme280.h  bme280_defs.h  bme280_port.c  bme280_port.h
Drivers/BME688/: bme688_port.c  bme688_port.h  bme68x.c  bme68x_defs.h
Drivers/BSEC/Config/: bsec_selectivity.c  bsec_selectivity.h
Drivers/PMS5003/: PMS5003_HAL_STM32.c  PMS5003_HAL_STM32.h  README.md
Drivers/SGP30/: sensirion_hw_i2c_implementation.c  sgp_git_version.c
Drivers/SSD1306/: ssd1306_conf.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
Inc/: config.h  main.h  retarget.h
Middleware/retarget/: retarget.c  retarget.h
Middleware/reusable/: console.c  console.h  consoleCommands.c  consoleIo.c  consoleIo.h  version.h
Src/: debug.c  main.c  retarget.c  stm32f4xx_hal_msp.c
